navbar akhirnya benar, benerin banyak conflicts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,11 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-<<<<<<< HEAD
-  font-family: 'Roboto', sans-serif !important; }
-=======
   font-family: 'helvetica' !important; }
->>>>>>> origin/master
 
 .darkerFilter {
   background: rgba(0, 0, 0, 0.4) !important;
@@ -21,40 +17,46 @@ body {
   position: fixed !important;
   top: 0 !important;
   background: #fff !important;
-  width: 100% !important; }
+  width: 100% !important;
+  height: 8vh; }
   .fixed a {
     color: #000 !important; }
 
 #navigation {
+  position: absolute;
+  bottom: 0;
   border: 0;
-  background: transparent;
+  background: rgba(255, 255, 255, 0.8);
   box-shadow: none;
   padding: 0 2em 0 2em;
   margin-bottom: 0;
-  bottom: 0;
-  height: 10vh;
   width: 100%;
   border-radius: 0;
-  font-size: 1.2em;
+  font-size: 1.5em;
   font-weight: 300;
-  position: absolute;
   transition: all .2s ease-in-out;
-  z-index: 1000; }
-  #navigation .navbar-brand {
-    color: #ccc; }
+  z-index: 1000;
+  color: #000;
+  overflow: hidden; }
+  #navigation h1 {
+    font-weight: 300;
+    width: 50%;
+    margin-top: 1em; }
+  #navigation img {
+    margin: 1em;
+    max-width: 70px; }
   #navigation #navbar {
     margin: 0;
     border: 0;
-    transition: all .2s ease-in-out; }
+    z-index: 1000; }
     #navigation #navbar .in {
       background: #fff;
       border: 0; }
     #navigation #navbar a {
-      color: #ccc;
+      color: #000;
       background: transparent;
       opacity: 0.8;
-      transition: all .2s ease-in-out;
-      font-weight: 300; }
+      transition: all .2s ease-in-out; }
     #navigation #navbar a:hover {
       color: #333; }
     #navigation #navbar ul li .active a {
@@ -82,14 +84,6 @@ body {
       padding: 0.3em 1em 0.3em 1em;
       font-size: 24px;
       opacity: 0.7;
-<<<<<<< HEAD
-      transition: opacity .35s ease-in-out;
-      background: transparent;
-      color: #fff; }
-    #firstPage .homeLine button:hover {
-      opacity: 1;
-      cursor: pointer; }
-=======
       transition: all .35s ease-in-out;
       background: transparent;
       color: #fff;
@@ -99,7 +93,6 @@ body {
       cursor: pointer; }
     #firstPage .homeLine button:active {
       border: 1px solid red; }
->>>>>>> origin/master
   #firstPage #parallax {
     background: url("../images/home_large.jpg");
     background-size: cover;
@@ -110,11 +103,7 @@ body {
     top: 0; }
 
 #pageTwo {
-<<<<<<< HEAD
-  height: 60vh;
-=======
   height: 66vh;
->>>>>>> origin/master
   width: 100%; }
   #pageTwo #booking {
     height: 37vh;
@@ -290,23 +279,6 @@ body {
 
 @media screen and (max-width: 1200px) {
   #pageTwo {
-<<<<<<< HEAD
-    height: 145vh; }
-    #pageTwo .bookingPanel {
-      height: 1180px !important; }
-
-  .bigLogoNav {
-    display: none !important; }
-
-  .noLogoNav {
-    display: block !important; }
-
-  #navigation {
-    padding: 1em 2em 1em 2em; }
-
-  #headerBusiness {
-    height: 50vh; }
-=======
     height: 170vh; }
     #pageTwo .bookingPanel {
       height: 1180px !important; }
@@ -325,12 +297,23 @@ body {
     display: none !important; }
 
   #navigation {
-    padding: 1em 2em 1em 2em;
-    min-height: 4vh; }
+    padding: 1em 2em 2em 2em;
+    height: 10vh;
+    transition: all .2s ease-in-out; }
+
+  .opened {
+    height: 50vh !important; }
+
+  .fixed {
+    transition: all .2s ease-in-out;
+    position: fixed !important;
+    background: #fff !important;
+    width: 100% !important; }
+    .fixed a {
+      color: #000 !important; }
 
   #headerBusiness {
     height: auto !important; }
->>>>>>> origin/master
 
   #packages {
     height: auto;
@@ -345,11 +328,7 @@ body {
     padding: 5em 2em 0 2em; }
 
   #headerTouristAttraction .panelHeaderTouristAttraction {
-<<<<<<< HEAD
-    height: 15vh;
-=======
     height: auto;
->>>>>>> origin/master
     width: auto; }
 
   #weddings {
@@ -360,8 +339,6 @@ body {
     padding-left: 2em;
     padding-right: 2em; }
 
-<<<<<<< HEAD
-=======
   #roomDetails .room {
     height: auto;
     font-weight: 300;
@@ -375,7 +352,6 @@ body {
     #roomDetails .room .headerPanelRoomText {
       padding: 0 2vh 0 2vh; }
 
->>>>>>> origin/master
   #footer {
     height: auto; }
     #footer .rightPanel {
@@ -387,21 +363,12 @@ body {
 
   #roomDetails .room {
     height: 65vh;
-<<<<<<< HEAD
     font-weight: 300; }
-    #roomDetails .room p {
-      margin-top: 2em; }
-    #roomDetails .room .picPanelRooms .imgRoom {
-      margin: auto; }
-=======
-    font-weight: 300;
-    padding-bottom: 1em; }
     #roomDetails .room p {
       margin-top: 2em; }
     #roomDetails .room .picPanelRooms .imgRoom {
       margin: auto;
       margin-bottom: 1em; }
->>>>>>> origin/master
     #roomDetails .room .headerPanelRoomText {
       padding: 0 2vh 0 2vh; }
 
@@ -416,25 +383,15 @@ body {
     padding-top: 2.5em; }
 
   #roomDetails .room {
-<<<<<<< HEAD
-    height: 65vh;
-=======
     height: auto;
->>>>>>> origin/master
     font-weight: 300; }
     #roomDetails .room p {
       margin-top: 2em; }
     #roomDetails .room .picPanelRooms .imgRoom {
-<<<<<<< HEAD
-      margin: auto; }
-    #roomDetails .room .headerPanelRoomText {
-      padding: 0 2vh 0 2vh; }
-=======
       margin: auto;
       padding-bottom: 1em; }
     #roomDetails .room .headerPanelRoomText {
       padding: 2em 2vh 2em 2vh; }
->>>>>>> origin/master
 
   #touristAttraction {
     height: 65vh; }
@@ -456,11 +413,6 @@ body {
 
   #footer .rightPanel {
     padding-left: 5vh; } }
-<<<<<<< HEAD
-@media screen and (max-width: 510px) {
-  #whereAreWe {
-    height: 55vh; } }
-=======
 @media screen and (max-width: 588px) {
   #footer .leftPanel {
     height: auto; }
@@ -481,6 +433,5 @@ body {
 
   .room {
     height: auto; } }
->>>>>>> origin/master
 
 /*# sourceMappingURL=style.css.map */
