--- a/assets/scss/media.scss
+++ b/assets/scss/media.scss
@@ -11,15 +11,6 @@
 		}
 	}
 
-	#navbar
-	{
-		margin:0;
-		border:0;
-		background: #fff;
-		padding:1em;
-		width:100vh;
-	}
-
 	#pageFour
 	{
 		height: 65vh;
@@ -35,6 +26,16 @@
 		padding:1em 2em 2em 2em;
 		height: 10vh;
 		transition:all .2s ease-in-out;
+
+		#navbar
+		{
+			margin:0;
+			margin-top: 0.5em;
+			border:0;
+			background: #fff;
+			padding:1em;
+			width:100vh;
+		}
 	}
 
 	.opened
