--- a/assets/scss/rooms.scss
+++ b/assets/scss/rooms.scss
@@ -11,7 +11,7 @@
 	{
 		z-index:1000;
 		width:100%;
-		height:30vh;
+		height:auto;
 		margin-top:-10vh;
 		background:$secondary-color;
 		padding:1em 2em 1em 2em;
@@ -81,6 +81,7 @@
 	{
 		background:$primary-color;
 		color:#fff;
+		padding-bottom: 3em;
 
 		.headerPanelRoomText
 		{
