--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,6 +14,7 @@ body
 {
 	margin:0;
 	padding:0;
+	overflow-x: hidden;
 
 	// font-family: 'Roboto', sans-serif !important;
 	font-family: 'helvetica' !important;
