--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,12 +106,13 @@ body {
     top: 0; }
 
 #pageTwo {
-  height: 66vh;
+  height: auto;
   width: 100%; }
   #pageTwo #booking {
-    height: 37vh;
+    height: auto;
     background: #272c2d;
-    padding-top: 2em; }
+    padding-top: 2em;
+    padding-bottom: 3em; }
     #pageTwo #booking .bookingNow {
       color: #fff; }
       #pageTwo #booking .bookingNow h1 {
@@ -225,7 +226,7 @@ body {
 #pageFive {
   background: url("../images/home_large.jpg");
   background-size: cover;
-  height: 50vh;
+  height: auto;
   width: 100%; }
   #pageFive .wrapMe .whitePanel {
     margin-top: 15vh;
@@ -281,10 +282,8 @@ body {
       font-weight: 40; }
 
 @media screen and (max-width: 1200px) {
-  #pageTwo {
-    height: 170vh; }
-    #pageTwo .bookingPanel {
-      height: 1180px !important; }
+  #pageTwo .bookingPanel {
+    height: 1180px !important; }
 
   #pageFour {
     height: 65vh; }
@@ -427,9 +426,6 @@ body {
     margin-bottom: 2em; }
     #headerBusinessandMeetings .panelHeaderBusinessMeetings {
       height: auto; }
-
-  #pageTwo {
-    height: 180vh; }
 
   #whereAreWe {
     height: 55vh; }
