--- a/assets/scss/media.scss
+++ b/assets/scss/media.scss
@@ -189,6 +189,14 @@
 		}
 	}
 
+	#pageTwo
+	{
+		.panelBooking
+		{
+			margin:0;
+		}
+	}
+
 	#headerBusiness
 	{
 		height:55vh;
@@ -229,10 +237,26 @@
 
 @media screen and (max-width:768px)
 {
+	#firstPage
+	{
+		.logoName
+		{
+			h1
+			{
+				font-size: 32px;
+			}
+		}
+	}
 
 	#navigation
 	{
 		height:12vh;
+
+		#navbar
+		{
+			padding:1em 0 0 0;
+			background:rgba(255,255,255,0.1);
+		}
 	}
 
 	#headerRooms
@@ -300,6 +324,7 @@
 		.aboutUsParagraph
 		{
 			padding: 0 1em 0 1em;
+			font-size: 14px;
 		}
 	}
 
