--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -229,6 +229,8 @@ body
 
 			.day
 			{
+				margin-bottom: 2em;
+
 				#dayBig
 				{
 					margin-top: -5px;
@@ -252,6 +254,8 @@ body
 
 			.month
 			{
+				margin-bottom: 2em;
+
 				#monthBig
 				{
 					margin-top: -5px;
@@ -275,6 +279,8 @@ body
 
 			.year
 			{
+				margin-bottom: 2em;
+				
 				#yearBig
 				{
 					margin-top: -5px;
